force-app/main/default/objects/Insight__c/Insight__c.object-meta.xml
<CustomObject>
    <label>Insight</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Insight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>