force-app/main/default/objects/Insight__c/fields/Average_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Revenue__c</fullName>
    <label>Average Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>