force-app/main/default/objects/Insight__c/fields/Deferred_Note__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Note__c</fullName>
    <label>Deferred Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>