force-app/main/default/objects/Insight__c/fields/Deferred_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Until_Date__c</fullName>
    <label>Deferred Until Date</label>
    <type>Date</type>
</CustomField>