force-app/main/default/objects/Insight__c/fields/EDGE_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>EDGE_Product_Name__c</fullName>
    <label>Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>