force-app/main/default/objects/Insight__c/fields/Estimated_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Revenue__c</fullName>
    <formula>&apos;$&apos; &amp;
IF(
Estimated_Annual_Revenue_Min__c &gt;= 1000,
RIGHT( TEXT( FLOOR( ROUND(Estimated_Annual_Revenue_Min__c, 0 ) / 1000 ) ), 3 ) &amp; &apos;,&apos;,
&apos;&apos;) &amp;
RIGHT( TEXT( FLOOR(Estimated_Annual_Revenue_Min__c)), 3) &amp;
&apos; - $&apos; &amp;
IF(
Estimated_Annual_Revenue_Max__c &gt;= 1000,
RIGHT( TEXT( FLOOR( ROUND( Estimated_Annual_Revenue_Max__c, 0 ) / 1000 ) ), 3 ) &amp; &apos;,&apos;,
&apos;&apos;) &amp;
RIGHT( TEXT( FLOOR(Estimated_Annual_Revenue_Max__c ) ), 3 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Annual Revenue</label>
    <type>Text</type>
</CustomField>