force-app/main/default/objects/Insight__c/fields/Estimated_Annual_Revenue_Max__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Revenue_Max__c</fullName>
    <label>Estimated Annual Revenue Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>