force-app/main/default/objects/Insight__c/fields/Insight_Details__c.field-meta.xml
<CustomField>
    <fullName>Insight_Details__c</fullName>
    <label>Insight Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>