force-app/main/default/objects/Insight__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>