force-app/main/default/objects/Insight__c/fields/Shortlist__c.field-meta.xml
<CustomField>
    <fullName>Shortlist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shortlist</label>
    <type>Checkbox</type>
</CustomField>