force-app/main/default/objects/Insight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Average_Annual_Revenue__c</columns>
    <columns>Estimated_Annual_Revenue__c</columns>
    <columns>Insight_Details__c</columns>
    <columns>Rank__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>